man1_MANS = 	 imagex.1 \
		 imagex-append.1 \
		 imagex-apply.1 \
		 imagex-capture.1 \
		 imagex-delete.1 \
		 imagex-dir.1 \
		 imagex-export.1 \
		 imagex-info.1 \
		 imagex-join.1 \
		 imagex-mount.1 \
		 imagex-mountrw.1 \
		 imagex-split.1 \
		 imagex-unmount.1 \
		 mkwinpeimg.1

$(man1_MANS): ../config.status

EXTRA_DIST:Doxyfile.in
